2007-05-28  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/MailerUI/UIxMailListView.m ([-createFolderAction]): removed
	method, replaced with a similar method in the new
	UIxMailFolderAction class module.
	([-deleteFolderAction]): idem.

	* UI/MailerUI/UIxMailFolderActions.m ([UIxMailFolderActions
	-createFolderAction]): new method implementing subfolder creation.
	([UIxMailFolderActions -renameFolderAction]): new method
	implementing subfolder renaming (basic implementation to be
	finalized later).
	([UIxMailFolderActions -deleteFolderAction]): new method
	implementing folder deletion.

	* UI/MailerUI/UIxMailFolderActions.[hm]: new module implementing
	web actions related to the handling of imap folder.

2007-05-25  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Mailer/SOGoMailFolder.m ([SOGoMailFolder
	-ownerInContext:localContext]): overriden method because we are an
	IMAP4 client and we need a bit more intelligence to deduce the
	owner of the current folder.
	([SOGoMailFolder -aclsForUser:uid]): aclForMailboxAtURL might
	return an NSException so we need to be careful here to avoid a
	crash.
	([SOGoMailFolder -aclUsers]): aclForMailboxAtURL might return an
	NSException so we need to be careful here to avoid a crash.

	* SoObjects/Mailer/SOGoMailAccounts.m
	([SOGoMailAccounts -fetchIdentitiesWithOnlyEmitterAccess:_flag])
	there is no longer any concept of Intranet or Internet connection
	handling.

	* SoObjects/Mailer/SOGoMailAccount.m ([SOGoMailAccount
	-sharedFolderName]): new method.
	([SOGoMailAccount -otherUsersFolderName]): new method.

	* UI/MailerUI/UIxMailFolderMenu.[hm]: removed module, obsoleted by
	new javascript code and the new UIxMailAccountActions class.

	* UI/MailerUI/UIxMailTree.[hm]: removed module, obsoleted by new
	javascript code and the new UIxMailAccountActions class.

	* UI/MailerUI/UIxMailTreeBlock.[hm]: removed module, obsoleted by
	new javascript code and the new UIxMailAccountActions class.
